add links slide

--- a/slides/deck.mdx
+++ b/slides/deck.mdx
@@ -117,3 +117,14 @@ Special `preload` function for `routes/*.svelte`
 - Full CSS in JS features
 - TypeScript support is still a bit WIP
 - React ecosystem
+
+---
+
+# Links
+
+- Slides & Code
+  - https://github.com/theshortcut/svelte-demo
+- Sebastian Markbåge on the direction of React compared to Svelte, Vue etc.
+  - https://gist.github.com/sebmarkbage/a5ef436427437a98408672108df01919
+- Evan You on reactivity in Vue, Svelte & React
+  - https://mobile.twitter.com/youyuxi/status/1169325119984082945
